--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   maps_launcher: ^2.0.1
   mask_text_input_formatter: ^2.4.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
