--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   maps_launcher: ^2.0.1
   mask_text_input_formatter: ^2.4.0
   auto_size_text: ^3.0.0
+  geocoding: ^2.0.5
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
