--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   auto_size_text: ^3.0.0
   geocoding: ^2.0.5
   geolocator: ^9.0.2
+  sqflite: ^2.2.0+3
+  path: ^1.8.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
