--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   sqflite: ^2.2.0+3
   path: ^1.8.0
   path_provider: ^2.0.11
+  font_awesome_flutter: ^10.2.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
