--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,8 +69,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/woman.png
-
+  - assets/Images/woman.png
+  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
