--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ app.*.map.json
 /android/app/release
 lib/views/android/add_donation.page.dart
 lib/views/android/widgets/location.page.dart
+
+.env
