--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sqflite: ^2.2.0+3
   path: ^1.8.0
   path_provider: ^2.0.11
+  cool_dropdown: ^1.4.2
 
 dev_dependencies:
   flutter_test:
