--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cool_dropdown: ^1.4.2
   font_awesome_flutter: ^10.2.1
   intl: ^0.17.0
+  shared_preferences: ^2.0.15
+  toast: ^0.3.0
 
 dev_dependencies:
   flutter_test:
