--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-  - assets/Images/woman.png
+  - assets/images/noPhoto.png
   
   # To add assets to your application, add an assets section, like this:
   # assets:
