--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   intl: ^0.17.0
   shared_preferences: ^2.0.15
-  toast: ^0.3.0
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
